@@ -1,3 +1,11 @@
+b0.6.0
+-> added check metadata
+  * created CheckMetadata class
+  X added creator and getter metadata methods to TransactionEntry
+  X added check metadata to advanced transaction metadata tab
+  X added support for check metadata to DataHandler
+  X added metadata table gui for check metadata
+
 v0.5.1
 * rationalized alpha
 * fixed new/edit transaction gui
